fix:emotion scrollbar height

--- a/src/assets/css/var.less
+++ b/src/assets/css/var.less
@@ -32,6 +32,7 @@
 .scrollbar(@w:2px){
     &::-webkit-scrollbar {
         width: @w;
+        height:@w;
     }
     &::-webkit-scrollbar-track,
     &::-webkit-scrollbar-track-piece {
